# flight-deal-finder

./: .flake8  README.md  pyproject.toml
flight_deals/: __main__.py  controller.py  data_manager.py  email_client.py  flight_data.py  flight_search.py  main.py  notification_manager.py  settings.py  sheet_api.py
tests/: test_data_manager.py  test_email_client.py  test_filght_data.py  test_flight_search.py  test_sheet_api.py
